# sac-example-project

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  Example.sac  use-example.sac
